<resources>
    <string name="app_name">NoteIt</string>
    <string name="action_settings">Settings</string>
    <string name="view_your_notes">View your Notes</string>
    <string name="note">Note :</string>
    <string name="note_header">Note Header</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="note_details">Note Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_notes">No notes</string>
</resources>
